Bug 98791 - Cannot import VDX files generated by lucidchart.com
Summary: Cannot import VDX files generated by lucidchart.com
Status: RESOLVED FIXED
Alias: None
Product: Document Liberation Project
Classification: Unclassified
Component: libvisio (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: David Tardon
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-21 03:17 UTC by skiani
Modified: 2017-10-30 11:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Simple chart example (43.94 KB, application/xml)
2016-03-21 03:17 UTC, skiani
Details

Note You need to log in before you can comment on or make changes to this bug.
Description skiani 2016-03-21 03:17:26 UTC
Created attachment 123751 [details]
Simple chart example

Trying to import a VDX file generated by Lucidchart.com and it just opens as text file. Lucid is fast becoming SAAS charting standard.
Comment 1 raal 2016-03-21 04:49:13 UTC
I can confirm with Version: 5.2.0.0.alpha0+ (x64)
Build ID: 042f16a19e3d5f884759dae71264433b988df0e6
CPU Threads: 1; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-03-16_10:03:38
Comment 2 David Tardon 2016-03-22 14:10:15 UTC
The document is not valid, because it does not specify namespace. But "VisioDocument" element name of the top element is hopefully specific enough, so I removed that extra check...

Btw, Visio 2010 refuses to open the document too. So if Lucid expects to become any standard, they should fix their export...