tdf#98791 remove namespace check for VDX

... to allow import of documents created by 3rd-party applications that
cannot be bothered to produce a valid XML (like lucidchart.com).

Change-Id: I70dda9a7d6e90e84d0eb78bd4dfa153e3e093528